--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,7 @@
             "message": "Deploying from angular-cli-ghpages",
             "branch": "gh-pages",
             "baseHref": "https://xpquiz.github.io",
-            "repo": "https://github.com/xpquiz/xpquiz.github.io.git",
+            "repo": "git@github.com:xpquiz/xpquiz.github.io.git",
             "name": "Isahann Hanacleto",
             "email": "isahanacleto@gmail.com"
           }
