--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@types/crypto-js": "^4.1.1",
     "angular-cli-ghpages": "^1.0.6",
+    "crypto-js": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xp.css": "^0.2.6",
