--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/crypto-js": "^4.1.1",
     "angular-cli-ghpages": "^1.0.6",
     "crypto-js": "^4.1.1",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xp.css": "^0.2.6",
