--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-cli-ghpages": "^1.0.6",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
+    "mustache": "^4.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xp.css": "^0.2.6",
@@ -32,6 +33,7 @@
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/mustache": "^4.2.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
