--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest --verbose",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -18,9 +19,11 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^29.5.3",
     "angular-cli-ghpages": "^1.0.6",
     "crypto-js": "^4.1.1",
+    "jest": "^29.6.2",
+    "jest-preset-angular": "^13.1.1",
     "moment": "^2.29.4",
     "mustache": "^4.2.0",
     "rxjs": "~7.8.0",
@@ -32,14 +35,9 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/mustache": "^4.2.2",
     "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
   }
 }
