--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest --verbose",
+    "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "private": true,
