--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xpquiz.github.io",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/mustache": "^4.2.2",
+    "@types/node": "^20.12.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
