--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "json-server": "json-server --watch db.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,7 +20,6 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@types/crypto-js": "^4.1.1",
-    "angular-cli-ghpages": "^1.0.6",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "mustache": "^4.2.0",
