--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@types/crypto-js": "^4.1.1",
+    "angular-cli-ghpages": "^1.0.6",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "mustache": "^4.2.0",
